fix: Final correction for WordCloud2.js CDN link in tags.html

--- a/tags.html
+++ b/tags.html
@@ -119,7 +119,7 @@ header-img: "img/tag-bg.png"
 </div>
 
 <!-- Scripts for WordCloud2 -->
-<script src="https://cdn.jsdelivr.net/npm/wordcloud2@1.2.2/wordcloud2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/wordcloud2.js@1.2.2/dist/wordcloud2.min.js"></script>
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
