--- a/tags.html
+++ b/tags.html
@@ -120,6 +120,7 @@ header-img: "img/tag-bg.png"
 
 <!-- Scripts for WordCloud2 -->
 <script>
+<script src="https://cdn.jsdelivr.net/npm/wordcloud2.js@1.2.2/dist/wordcloud2.min.js"></script>
 document.addEventListener('DOMContentLoaded', function() {
     // Prepare data for word cloud
     const tagsData = [];
