添加新的信息源

--- a/daily.html
+++ b/daily.html
@@ -21,6 +21,7 @@ http_headers:
   <div class="section" id="quick-links">
     <h3>🔗 常用链接</h3>
     <a href="https://huggingface.co/papers/trending" target="_blank">Hugging Face Trending</a>
+    <a href="https://aibrews.substack.com/archive" target="_blank">AI Brews</a>
     <a href="https://github.com/feed" target="_blank">GitHub Feed</a>
     <a href="https://www.zhihu.com/" target="_blank">zhihu</a>
     <a href="https://bailian.console.aliyun.com/?tab=model#/model-market/all" target="_blank">阿里百炼</a>
