--- a/daily.html
+++ b/daily.html
@@ -22,6 +22,8 @@ http_headers:
     <h3>🔗 常用链接</h3>
     <a href="https://huggingface.co/papers/trending" target="_blank">Hugging Face Trending</a>
     <a href="https://aibrews.substack.com/archive" target="_blank">AI Brews</a>
+    <a href="https://research.google/blog" target="_blank">Google Blog</a>
+    <a href="https://openai.com/research/index" target="_blank">OpenAI</a>
     <a href="https://github.com/feed" target="_blank">GitHub Feed</a>
     <a href="https://www.zhihu.com/" target="_blank">zhihu</a>
     <a href="https://bailian.console.aliyun.com/?tab=model#/model-market/all" target="_blank">阿里百炼</a>
