--- a/daily.html
+++ b/daily.html
@@ -35,6 +35,7 @@ http_headers:
 #sidebar {
   position: fixed;
   top: 300px; /* 调整以适应头部高度（桌面版内边距110px + 内容约110px + 20px间距） */
+  bottom: 40px; /* 距离页面底部40px */
   left: 30px;
   width: 240px;
   max-height: calc(100vh - 260px); /* 限制最大高度，留出更多顶部空间 */
