--- a/daily.html
+++ b/daily.html
@@ -25,6 +25,7 @@ http_headers:
     <a href="https://research.google/blog" target="_blank">Google Blog</a>
     <a href="https://openai.com/research/index" target="_blank">OpenAI</a>
     <a href="https://medium.com/google-developer-experts" target="_blank">Medium</a>
+    <a href="https://aiengineering.academy/" target="_blank">aiengineering</a>
     <a href="https://github.com/feed" target="_blank">GitHub Feed</a>
     <a href="https://www.zhihu.com/" target="_blank">zhihu</a>
     <a href="https://bailian.console.aliyun.com/?tab=model#/model-market/all" target="_blank">阿里百炼</a>
