--- a/404.html
+++ b/404.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 🙊"
-header-img: "img/404-bg.jpg"
+header-img: "img/404-bg.webp"
 permalink: /404.html
 ---
 
