更新信息源

--- a/daily.html
+++ b/daily.html
@@ -22,6 +22,7 @@ http_headers:
   <div class="section" id="quick-links">
     <h3>🔗 常用链接</h3>
     <a href="https://huggingface.co/papers/trending" target="_blank">Hugging Face Trending</a>
+    <a href="https://github.com/ruanyf/weekly" target="_blank">GitHub weekly</a>
     <a href="https://aibrews.substack.com/archive" target="_blank">AI Brews</a>
     <a href="https://research.google/blog" target="_blank">Google Blog</a>
     <a href="https://openai.com/research/index" target="_blank">OpenAI</a>
