--- a/gwy.html
+++ b/gwy.html
@@ -118,56 +118,64 @@ nav-order: 1
 
 <!-- 2. 时间轴内容 -->
 {% assign today = site.time | date: "%Y-%m-%d" %}
-{% assign logs = site.gwy_logs | sort: 'date' | reverse %}
-{% for log in logs %}
-  {% assign log_date = log.date | date: "%Y-%m-%d" %}
-  {% assign total_hours = 0 %}
-  {% if log.subjects %}
-    {% for sub in log.subjects %}
-      {% assign total_hours = total_hours | plus: sub.hours %}
-    {% endfor %}
-  {% else %}
-    {% assign total_hours = log.study_hours | default: 0 %}
-  {% endif %}
+{% assign all_entries = site.gwy_logs | concat: site.gwy_reports | sort: 'date' | reverse %}
+
+{% for entry in all_entries %}
+  {% assign entry_date = entry.date | date: "%Y-%m-%d" %}
 
   <!-- 只显示：今天的或过去的记录 -->
-  {% if log_date <= today %}
+  {% if entry_date <= today %}
     
-    <!-- 计算样式等级 -->
-    {% assign status_class = "level-4" %}
-    {% if total_hours == 0 %}
-        {% assign status_class = "alert" %}
-    {% elsif total_hours < 2 %}
-        {% assign status_class = "level-1" %}
-    {% elsif total_hours < 4 %}
-        {% assign status_class = "level-2" %}
-    {% elsif total_hours < 6 %}
-        {% assign status_class = "level-3" %}
-    {% endif %}
+    {% if entry.is_report %}
+      <!-- 周报卡片样式 -->
+      <div class="timeline-item report-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">{{ entry.date | date: "%Y年%m月%d日" }}</div>
+          <div class="timeline-card report-card">
+              <h3 class="timeline-title">👑 {{ entry.title }}</h3>
+              <div class="timeline-content">
+                  {{ entry.content | markdownify }}
+              </div>
+          </div>
+      </div>
+    {% else %}
+      <!-- 普通日记卡片 -->
+      {% assign total_hours = 0 %}
+      {% if entry.subjects %}
+        {% for sub in entry.subjects %}
+          {% assign total_hours = total_hours | plus: sub.hours %}
+        {% endfor %}
+      {% else %}
+        {% assign total_hours = entry.study_hours | default: 0 %}
+      {% endif %}
 
-    <div class="timeline-item {{ status_class }}-item">
-        <div class="timeline-dot"></div>
-        <div class="timeline-date">{{ log.date | date: "%Y年%m月%d日" }}</div>
-        <div class="timeline-card {{ status_class }}-card">
-            <h3 class="timeline-title">{{ log.title }}</h3>
-            <div class="timeline-meta">
-                {% if log.subjects %}
-                    {% for sub in log.subjects %}
-                    <span style="margin-right: 10px; background: #eee; padding: 2px 6px; border-radius: 4px; font-size: 0.8em;">
-                        {{ sub.name }}: {{ sub.hours }}h
-                    </span>
-                    {% endfor %}
-                {% else %}
-                    <span>⏱️ 学习 {{ log.study_hours }} 小时</span>
-                    {% if log.tags %}
-                    <span style="margin-left: 10px;">🏷️ {{ log.tags | join: ", " }}</span>
+      {% if total_hours > 0 %}
+        {% assign status_class = "level-4" %}
+        {% if total_hours < 2 %}{% assign status_class = "level-1" %}
+        {% elsif total_hours < 4 %}{% assign status_class = "level-2" %}
+        {% elsif total_hours < 6 %}{% assign status_class = "level-3" %}
+        {% endif %}
+
+        <div class="timeline-item {{ status_class }}-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-date">{{ entry.date | date: "%Y年%m月%d日" }}</div>
+            <div class="timeline-card {{ status_class }}-card">
+                <h3 class="timeline-title">{{ entry.title }}</h3>
+                <div class="timeline-meta">
+                    {% if entry.subjects %}
+                        {% for sub in entry.subjects %}
+                        <span style="margin-right: 10px; background: #eee; padding: 2px 6px; border-radius: 4px; font-size: 0.8em;">
+                            {{ sub.name }}: {{ sub.hours }}h
+                        </span>
+                        {% endfor %}
                     {% endif %}
-                {% endif %}
-            </div>
-            <div class="timeline-content">
-                {{ log.content | markdownify }}
+                </div>
+                <div class="timeline-content">
+                    {{ entry.content | markdownify }}
+                </div>
             </div>
         </div>
-    </div>
+      {% endif %}
+    {% endif %}
   {% endif %}
 {% endfor %}
