--- a/gwy.html
+++ b/gwy.html
@@ -4,7 +4,7 @@ title: "Gwy"
 nav-order: 1
 ---
 
-<!-- 1. 数据准备 (Raw Data) -->
+<!-- 1. 数据准备 (Raw sData) -->
 <script>
     const quotes = [
         {% for quote in site.data.gwy_quotes %}
@@ -39,7 +39,8 @@ nav-order: 1
     document.addEventListener('DOMContentLoaded', function() {
         // --- A. 数据处理 ---
         const studyLogs = {}; 
-        const subjectStats = {}; 
+        const subjectStats = {}; // 总的 (从2026-01-01开始)
+        const weeklySubjectStats = {}; // 本周的
         let totalHours = 0;
         let totalDaysSet = new Set(); 
 
@@ -53,6 +54,14 @@ nav-order: 1
             "申论": "申论", "大作文": "申论", "小题": "申论", "公文": "申论",
             "面试": "面试", "模拟": "模考"
         };
+
+        // 计算本周开始日期 (北京时间星期一00:00, 但JS使用本地时间, 假设+8)
+        let now = new Date();
+        let currentDay = now.getDay(); // 0=Sun, 1=Mon, ..., 6=Sat
+        let weekStart = new Date(now);
+        weekStart.setDate(weekStart.getDate() - (currentDay === 0 ? 6 : currentDay - 1));
+        weekStart.setHours(0, 0, 0, 0); // 设置为00:00
+        let weekStartStr = weekStart.toISOString().split('T')[0];
 
         rawLogs.forEach(log => {
             // 过滤掉 2026-01-01 之前的日志
@@ -69,6 +78,7 @@ nav-order: 1
                 totalDaysSet.add(log.date);
             }
 
+            // 总 subjectStats
             if (log.subjects && log.subjects.length > 0) {
                 log.subjects.forEach(sub => {
                     const stdName = subjectMapping[sub.name] || "其他";
@@ -76,6 +86,18 @@ nav-order: 1
                 });
             } else if (log.totalHours > 0) {
                 subjectStats['其他'] = (subjectStats['其他'] || 0) + log.totalHours;
+            }
+
+            // 本周 weeklySubjectStats (只累积本周日志)
+            if (log.date >= weekStartStr) {
+                if (log.subjects && log.subjects.length > 0) {
+                    log.subjects.forEach(sub => {
+                        const stdName = subjectMapping[sub.name] || "其他";
+                        weeklySubjectStats[stdName] = (weeklySubjectStats[stdName] || 0) + sub.hours;
+                    });
+                } else if (log.totalHours > 0) {
+                    weeklySubjectStats['其他'] = (weeklySubjectStats['其他'] || 0) + log.totalHours;
+                }
             }
         });
 
@@ -111,7 +133,7 @@ nav-order: 1
 
         // --- E. 调用图表渲染 ---
         if (typeof renderCharts === 'function') {
-            renderCharts(studyLogs, subjectStats);
+            renderCharts(studyLogs, subjectStats, weeklySubjectStats); // 添加 weeklySubjectStats 参数
         }
     });
 </script>
